@startuml

title US001

/'
As an Administrator, I want to configure the location of the house.
'/

class DefineHouseLocationController {
  - house : House
  - locationMapper : LocationMapper
  + DefineHouseLocationController(...)
  + defineHouseLocation(...) : LocationDTO
}

class House {
  - locationFactory : LocationFactory
  + House(...)
  + defineLocation(...) : Location
  + getLocation() : Location
  }

class Location {
  - address : String
  - zipCode : String
  - gpsFactory : GPSFactory
  + Location(...)
  + getAddress() : String
  + getZipCode() : String
  + getGps() : GPS
  - validAddress(...) : boolean
  - validZipCode(...) : boolean
  - validGpsFactory(...) : boolean
}

class GPS {
  - latitude : double
  - longitude : double
  + GPS(...)
  + getLatitude() : double
  + getLongitude() : double
  - validLatitude(...) : boolean
  - validLongitude(...) : boolean
}

class LocationDTO {
  - address : String
  - zipCode : String
  - latitude : double
  - longitude : double
  + LocationDTO(...)
  + getAddress() : String
  + getZipCode() : String
  + getLatitude() : double
  + getLongitude() : double
}

class LocationMapper {
  + LocationMapper(...)
  + locationToDTO(...) : LocationDTO
}

interface LocationFactory {
  + createLocation(...) : Location
}

class LocationFactoryImp {
  + createLocation(...) : Location
}

interface GPSFactory {
  + createGPS(...) : GPS
}

class GPSFactoryImp {
  + createGPS(...) : GPS
}



House "1  " *-- "1  " Location :  "  has"
Location "1  " *-- "1  " GPS : "  has"
DefineHouseLocationController ..>  House : "  uses"
DefineHouseLocationController  ..>  LocationMapper : "  uses"
LocationMapper "1  " ..> " *  " LocationDTO : "  creates"

LocationFactory <|. LocationFactoryImp : "  implements"
House  ..>  LocationFactory : "  uses"
LocationFactoryImp "1" .> " *   " Location : "        creates"

GPSFactory <|. GPSFactoryImp : "  implements"
Location  ..>  GPSFactory : "  uses"
GPSFactoryImp "1" .> " *   " GPS : "        creates"

@enduml